nginx_proxy_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-proxy
